--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,14 +4,13 @@ updates:
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "10:00"
+      interval: "daily"
+      time: "09:00"
     open-pull-requests-limit: 10
     reviewers:
       - "auto-continue-dev"
     commit-message:
-      prefix: "security"
+      prefix: "deps"
       include: "scope"
     # Security updates
     allow:
@@ -37,9 +36,8 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "10:00"
+      interval: "daily"
+      time: "09:00"
     open-pull-requests-limit: 5
     commit-message:
       prefix: "ci"
