--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -11,17 +11,12 @@ on:
 jobs:
   analyze:
     name: Analyze
-    runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
-    timeout-minutes: ${{ (matrix.language == 'swift' && 120) || 360 }}
+    runs-on: ubuntu-latest
+    timeout-minutes: 360
     permissions:
       actions: read
       contents: read
       security-events: write
-
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'javascript' ]
 
     steps:
     - name: Checkout repository
@@ -36,18 +31,23 @@ jobs:
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v3
       with:
-        languages: ${{ matrix.language }}
-        queries: security-extended,security-and-quality
+        languages: javascript
 
     - name: Install dependencies
-      run: npm ci
-
-    - name: Build TypeScript
       run: |
+        npm ci
+        
+    - name: Build project
+      run: |
+        echo "Building TypeScript project..."
         npm run check-types
-        npm run compile
+        echo "TypeScript compilation completed"
+        npm run lint
+        echo "Linting completed"
+        node esbuild.js
+        echo "Build process completed"
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
       with:
-        category: "/language:${{matrix.language}}"
+        category: "/language:javascript"
