--- a/package.json
+++ b/package.json
@@ -170,6 +170,7 @@
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "check-types": "tsc --noEmit",
     "lint": "eslint src",
+    "lint:ci": "eslint src",
     "test": "vscode-test",
     "security-check": "bash scripts/security-check.sh",
     "presecurity-check": "npm audit",
