--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -23,19 +23,33 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
+    - name: Run type checking
+      run: npm run check-types
+      
+    - name: Run linting
+      run: npm run lint
+      
     - name: Run security audit
       run: npm audit --audit-level moderate
       
     - name: Run security checks
       run: npm run security-check
       
-    - name: Check for secrets
+    - name: Check for secrets with TruffleHog
+      if: github.event_name == 'pull_request'
       uses: trufflesecurity/trufflehog@main
       with:
         path: ./
-        base: main
-        head: HEAD
-        extra_args: --only-verified
+        base: ${{ github.event.pull_request.base.sha }}
+        head: ${{ github.event.pull_request.head.sha }}
+        extra_args: --only-verified --fail
+        
+    - name: Full repository scan for secrets (push to main)
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      uses: trufflesecurity/trufflehog@main
+      with:
+        path: ./
+        extra_args: --only-verified --fail
         
   dependency-check:
     runs-on: ubuntu-latest
