--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -24,32 +24,30 @@ jobs:
       run: npm ci
       
     - name: Run type checking
-      run: npm run check-types
+      run: |
+        echo "🔍 Running TypeScript type checking..."
+        npm run check-types
       
     - name: Run linting
-      run: npm run lint
+      run: |
+        echo "🔍 Running ESLint..."
+        npm run lint
       
     - name: Run security audit
-      run: npm audit --audit-level moderate
+      run: |
+        echo "🔍 Running npm security audit..."
+        npm audit --audit-level moderate
       
     - name: Run security checks
-      run: npm run security-check
+      run: |
+        echo "🔍 Running custom security checks..."
+        npm run security-check
       
     - name: Check for secrets with TruffleHog
-      if: github.event_name == 'pull_request'
       uses: trufflesecurity/trufflehog@main
       with:
         path: ./
-        base: ${{ github.event.pull_request.base.sha }}
-        head: ${{ github.event.pull_request.head.sha }}
-        extra_args: --only-verified --fail
-        
-    - name: Full repository scan for secrets (push to main)
-      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-      uses: trufflesecurity/trufflehog@main
-      with:
-        path: ./
-        extra_args: --only-verified --fail
+        extra_args: --only-verified
         
   dependency-check:
     runs-on: ubuntu-latest
