--- a/package.json
+++ b/package.json
@@ -214,16 +214,16 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run check-types && node esbuild.js --production",
-    "compile": "npm run check-types && npm run lint && node esbuild.js",
+    "compile": "npm run check-types && node esbuild.js && npm run lint",
     "watch": "npm-run-all -p watch:*",
     "watch:esbuild": "node esbuild.js --watch",
     "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
-    "package": "npm run check-types && npm run lint && node esbuild.js --production",
+    "package": "npm run check-types && node esbuild.js --production && npm run lint",
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "check-types": "tsc --noEmit",
-    "lint": "eslint src",
+    "lint": "eslint dist",
     "test": "vscode-test",
     "security-check": "bash scripts/security-check.sh",
     "presecurity-check": "npm audit",
