--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -8,15 +8,16 @@ on:
   schedule:
     - cron: '24 4 * * 2'
 
+permissions:
+  actions: read
+  contents: read
+  security-events: write
+
 jobs:
   analyze:
     name: Analyze
-    runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
-    timeout-minutes: ${{ (matrix.language == 'swift' && 120) || 360 }}
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
+    runs-on: ubuntu-latest
+    timeout-minutes: 360
 
     strategy:
       fail-fast: false
@@ -37,18 +38,13 @@ jobs:
       uses: github/codeql-action/init@v3
       with:
         languages: ${{ matrix.language }}
-        queries: security-extended,security-and-quality
 
     - name: Install dependencies
-      run: |
-        echo "📦 Installing dependencies..."
-        npm ci
+      run: npm ci
 
-    - name: Build TypeScript
+    - name: Build
       run: |
-        echo "🔨 Building TypeScript..."
         npm run check-types
-        echo "🔨 Building with esbuild..."
         node esbuild.js --production
 
     - name: Perform CodeQL Analysis
