--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ main ]
 
+permissions:
+  contents: read
+  security-events: write
+  actions: read
+
 jobs:
   security:
     runs-on: ubuntu-latest
@@ -48,15 +53,10 @@ jobs:
       run: |
         echo "🔍 Running custom security checks..."
         npm run security-check
-      
-    - name: Check for secrets with TruffleHog
-      uses: trufflesecurity/trufflehog@main
-      with:
-        path: ./
-        extra_args: --only-verified --exclude-paths=node_modules,dist,out,.git,.vscode
         
   dependency-check:
     runs-on: ubuntu-latest
+    if: github.event_name == 'push'
     
     steps:
     - name: Checkout code
@@ -71,10 +71,6 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
-    - name: Run Snyk to check for vulnerabilities
-      uses: snyk/actions/node@master
-      env:
-        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      with:
-        args: --severity-threshold=high
-      continue-on-error: true  # Don't fail if Snyk token is not available
+    - name: Security audit
+      run: npm audit --audit-level high
+      continue-on-error: true
