--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,25 +23,32 @@ jobs:
         node-version: '18'
         cache: 'npm'
         
+    - name: Clear npm cache
+      run: npm cache clean --force
+        
     - name: Install dependencies
-      run: npm ci
+      run: |
+        rm -rf node_modules package-lock.json
+        npm install
       
     - name: Type check
       run: npm run check-types
       
-    - name: Build
-      run: node esbuild.js
+    - name: Build with clean dist
+      run: |
+        rm -rf dist
+        node esbuild.js
       
-    - name: Lint
+    - name: Lint compiled output
       run: npm run lint
       continue-on-error: true
       
-    - name: Security audit
-      run: npm audit --audit-level moderate
+    - name: Test compile-clean script
+      run: npm run compile-clean
       continue-on-error: true
       
-    - name: Package
-      run: npm run package
+    - name: Security audit
+      run: npm audit --audit-level high
       continue-on-error: true
 
   security-scan:
