--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -5,8 +5,6 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  schedule:
-    - cron: '24 4 * * 2'
 
 permissions:
   actions: read
@@ -17,7 +15,7 @@ jobs:
   analyze:
     name: Analyze
     runs-on: ubuntu-latest
-    timeout-minutes: 360
+    timeout-minutes: 60
 
     strategy:
       fail-fast: false
@@ -32,7 +30,6 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-        cache: 'npm'
 
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v3
@@ -40,12 +37,14 @@ jobs:
         languages: ${{ matrix.language }}
 
     - name: Install dependencies
-      run: npm ci
+      run: |
+        npm cache clean --force
+        npm install
 
     - name: Build
       run: |
         npm run check-types
-        node esbuild.js --production
+        node esbuild.js
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
